--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -20,7 +20,7 @@
 				<div class="col-6 col-md-2">
 					<img src="../../../images/xdmin/coupang.png" class="img-fluid">
 				</div>
-				<div class="col-6 col-md-5 fs-4 mb-2">Coupang Management System</div>
+				<div class="col-6 col-md-5 fs-4 mb-2 d-md-block d-none">Coupang Management System</div>
 
 				<!-- 
 				<div class="col-12 col-md-2 fs-6 mb-2">
@@ -31,15 +31,15 @@
 				</div>
 				 -->
 
-				<div class="col-2 col-md-1 mb-2 p-0 text-end pe-2">
+				<div class="col-2 col-md-1 mb-2 p-0 text-end pe-2 d-md-block d-none">
 					<img src="../../../images/xdmin/lee.jpg" style="width: 40px; height: 50px;" class="rounded-circle border border-5">
 				</div>
-				<div class="col-4 col-md-1 mb-2">
+				<div class="col-4 col-md-1 mb-2 d-md-block d-none">
 					<div class="row">Yun (CEO)</div>
 					<div class="row">Administrator</div>
 				</div>
 
-				<div class="col-3 col-md-1 mb-2">
+				<div class="col-3 col-md-1 mb-2 d-md-block d-none">
 					<select class="form-select">
 						<option>언어</option>
 						<option>한국어</option>
@@ -47,7 +47,7 @@
 						<option>日本語</option>
 					</select>
 				</div>
-				<div class="col col-md text-end">
+				<div class="col col-md text-end d-md-block d-none">
 
 					<button class="btn btn-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
@@ -67,6 +67,19 @@
 					</button>
 				 -->
 
+				</div>
+			</div>
+			<div class="row box-white py-1">
+				<div class="col-10 col-md-10 fs-4 mb-2 d-md-none">Coupang Management System</div>
+				<div class="col col-md text-end d-md-none">
+
+					<button class="btn btn-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+							viewBox="0 0 16 16">
+			  		<path fill-rule="evenodd"
+								d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+					</svg>
+					</button>
 				</div>
 			</div>
 
@@ -281,15 +294,15 @@
 						<div class="text-end">
 							<div class="btn-group btn-group-sm box-white" role="group">
 								<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" disabled> <label
-									class="btn btn-outline-secondary" for="btnradio1">view</label> <input type="radio" class="btn-check"
-									name="btnradio" id="btnradio2" autocomplete="off" checked> <label class="btn btn-outline-secondary"
+									class="btn btn-outline-dark" for="btnradio1">view</label> <input type="radio" class="btn-check"
+									name="btnradio" id="btnradio2" autocomplete="off" checked> <label class="btn btn-outline-dark"
 									for="btnradio2">5</label> <input type="radio" class="btn-check" name="btnradio" id="btnradio3"
-									autocomplete="off"> <label class="btn btn-outline-secondary" for="btnradio3">10</label> <input
+									autocomplete="off"> <label class="btn btn-outline-dark" for="btnradio3">10</label> <input
 									type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off"> <label
-									class="btn btn-outline-secondary" for="btnradio4">20</label> <input type="radio" class="btn-check"
-									name="btnradio" id="btnradio5" autocomplete="off"> <label class="btn btn-outline-secondary"
+									class="btn btn-outline-dark" for="btnradio4">20</label> <input type="radio" class="btn-check"
+									name="btnradio" id="btnradio5" autocomplete="off"> <label class="btn btn-outline-dark"
 									for="btnradio5">50</label> <input type="radio" class="btn-check" name="btnradio" id="btnradio6"
-									autocomplete="off"> <label class="btn btn-outline-secondary" for="btnradio6">100</label>
+									autocomplete="off"> <label class="btn btn-outline-dark" for="btnradio6">100</label>
 							</div>
 						</div>
 					</div>
