--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -198,7 +198,7 @@
 			<div class="fs-3">Code</div>
  			-->
 			<div class="width90">
-				<div class="row border border-2 my-2 box-white">
+				<div class="row border border-2 my-2 box-white" id="searchBox">
 					<div class="col-12 col-md-9">
 						<div class="row my-2 pt-2">
 							<div class="col-12 col-md-2">ㆍ회원등급</div>
@@ -273,6 +273,14 @@
 						</button>
 					</div>
 				</div>
+				
+				<!-- 모바일 -->
+				<div class="row d-sm-none">
+					<div class="col">
+						<a href="#" class="btn btn-outline-dark">상세검색</a>
+					</div>
+				</div>
+				
 			</div>
 
 			<br> <br>
