--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -50,20 +50,12 @@
 				<div class="col col-md text-end d-md-block d-none">
 
 					<button class="btn btn-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
-							viewBox="0 0 16 16">
-			  		<path fill-rule="evenodd"
-								d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
-					</svg>
+						<i class="bi bi-list"></i>
 					</button>
 
 					<!-- 
 					<button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
-							viewBox="0 0 16 16">
-			  		<path fill-rule="evenodd"
-								d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
-					</svg>
+						<i class="bi bi-list"></i>
 					</button>
 				 -->
 
@@ -74,11 +66,7 @@
 				<div class="col col-md text-end d-md-none">
 
 					<button class="btn btn-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
-							viewBox="0 0 16 16">
-			  		<path fill-rule="evenodd"
-								d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
-					</svg>
+						<i class="bi bi-list"></i>
 					</button>
 				</div>
 			</div>
@@ -286,16 +274,10 @@
 			<br> <br>
 			<div class="width92">
 				<div class="row">
-					<div class="col-8 col-md-3 ms-3 p-1 border border-2 box-white">검색결과 : 13 / 총 13명 검색결과</div>
+					<div class="col-8 col-md-3 p-1 border border-2 box-white" style="margin-left: 12px;">검색결과 : 13 / 총 13명 검색결과</div>
 					<div class="col-1 col-md-1 ms-1 me-0 p-0">
-						<a class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#excelModal"> <svg
-								xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-excel"
-								viewBox="0 0 16 16">
-						  <path
-									d="M5.884 6.68a.5.5 0 1 0-.768.64L7.349 10l-2.233 2.68a.5.5 0 0 0 .768.64L8 10.781l2.116 2.54a.5.5 0 0 0 .768-.641L8.651 10l2.233-2.68a.5.5 0 0 0-.768-.64L8 9.219l-2.116-2.54z" />
-						  <path
-									d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5v2z" />
-						</svg>
+						<a class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#excelModal"> 
+							<i class="bi bi-file-earmark-excel"></i>
 						</a>
 					</div>
 					<div class="col-12 col-md ms-1 me-0 my-1">
@@ -317,7 +299,7 @@
 				</div>
 
 				<div class="table-responsive">
-					<table class="table table-lg table-hover border border-2 box-white">
+					<table class="table table-hover border border-2 box-white">
 						<thead>
 							<tr>
 								<th><input type="checkbox" name="checkbox1" onclick="selectAll1(this)" class="form-check-input"></th>
@@ -422,27 +404,37 @@
 				</div>
 
 
-				<div class="row ps-1">
-					<div class="col col-md-6 ms-1 p-0">
-						<a class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal"> <svg
-								xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
-								viewBox="0 0 16 16">
-							  <path
-									d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
-							  <path fill-rule="evenodd"
-									d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
-							</svg>
-						</a> <a class="btn btn-primary" href="./memberForm.html"> <svg xmlns="http://www.w3.org/2000/svg" width="16"
-								height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
-							  <path
-									d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
-							  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
-							</svg>
+				<div class="row ps-2">
+					<div class="col col-md-4 ms-1 p-0">
+						<a class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal"> 
+							<i class="bi bi-trash"></i>
+						</a> 
+						<a class="btn btn-primary" href="./memberForm.html"> 
+							<i class="bi bi-plus-square"></i>
 						</a>
 					</div>
+					<!-- 같은줄 or 따로뺄지 -->
+					<!-- 
+					<div class="col col-md-6">
+						<nav>
+							<ul class="pagination">
+								<li class="page-item disabled"><a class="page-link" href="#"><<</a></li>
+								<li class="page-item disabled"><a class="page-link" href="#"><</a></li>
+								<li class="page-item disabled"><a class="page-link" href="#">1</a></li>
+								<li class="page-item"><a class="page-link" href="#">2</a></li>
+								<li class="page-item"><a class="page-link" href="#">3</a></li>
+								<li class="page-item"><a class="page-link" href="#">4</a></li>
+								<li class="page-item"><a class="page-link" href="#">5</a></li>
+								<li class="page-item"><a class="page-link" href="#">></a></li>
+								<li class="page-item"><a class="page-link" href="#">>></a></li>
+							</ul>
+						</nav>
+					</div>
+					 -->	
 				</div>
 			</div>
-			<nav>
+			<!-- 같은줄 or 따로뺄지 -->
+			<!-- <nav>
 				<ul class="pagination justify-content-center">
 					<li class="page-item disabled"><a class="page-link" href="#"><<</a></li>
 					<li class="page-item disabled"><a class="page-link" href="#"><</a></li>
@@ -454,8 +446,8 @@
 					<li class="page-item"><a class="page-link" href="#">></a></li>
 					<li class="page-item"><a class="page-link" href="#">>></a></li>
 				</ul>
-			</nav>
-			<br> <br> <br> <br>
+			</nav> -->
+			<br> <br> 
 		</div>
 		<div class="container-fluid">
 			<div class="row">
