--- a/public/durian/html/xdmin/loginout/login3.html
+++ b/public/durian/html/xdmin/loginout/login3.html
@@ -6,6 +6,7 @@
 <title>로그인 화면</title>
 <link rel="stylesheet" href="../../../bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css">
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="../../../css/style.css">
 
 <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
@@ -33,10 +34,7 @@
 					<div class="input-group input-group-lg mb-3">
 						<span class="input-group-text bg-light" id="userIcon">
 							<label for="Username">
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle text-secondary" viewBox="0 0 16 16">
-								  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-								  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-								</svg>	
+								<i class="bi bi-person-circle text-secondary"></i>	
 							</label>
 						</span>
 						<input type="text" class="form-control" id="Username" placeholder="아이디(이메일)" aria-label="Username" aria-describedby="userIcon">
@@ -45,9 +43,7 @@
 					<div class="input-group input-group-lg mb-3">
 						<span class="input-group-text bg-light" id="passwordIcon">
 							<label for="Password">
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill text-secondary" viewBox="0 0 16 16">
-								  <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
-								</svg>
+								<i class="bi bi-file-lock2-fill text-secondary"></i>
 							</label>
 						</span>
 						<input type="password" class="form-control" id="Password" placeholder="비밀번호" aria-label="Password" aria-describedby="passwordIcon">
