--- a/public/bootstrapexc.html
+++ b/public/bootstrapexc.html
@@ -12,22 +12,14 @@
 a {
 	text-decoration: none;
 }
+
 </style>
 
 </head>
 
 <body>
 
-	<p>
-		<a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
-			aria-controls="collapseExample"> 회원관리 </a>
-		<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-			aria-expanded="false" aria-controls="collapseExample">Button with data-bs-target</button>
-	</p>
-	<div class="collapse" id="collapseExample">
-		<a class="btn btn-primary" role="button" aria-expanded="false"
-			aria-controls="collapseExample"> 유저관리 </a>
-	</div>
+	<input type="text" class="red-input">
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
