--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -10,6 +10,7 @@
 
 <link rel="stylesheet" href="../../../css/sidebars.css">
 
+
 </head>
 
 <body>
@@ -338,7 +339,7 @@
 									<div class="d-flex justify-content-center align-items-center">
 										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-chat-right-dots"></i></a>
 										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-envelope"></i></i></a>
-										<a href="#" class="btn btn-sm btn-outline-dark py-0">관리</a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0" onclick="window.open('memberview.html','name','resizable=no width=600 height=500');return false">관리</a>
 									</div>
 								</td>
 							</tr>
