--- a/public/durian/html/xdmin/member/memberview.html
+++ b/public/durian/html/xdmin/member/memberview.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="uTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>회원목록</title>
+<title>회원정보</title>
 <link rel="stylesheet" href="../../../bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="../../../css/style.css">
@@ -14,6 +14,137 @@
 </head>
 
 <body>
+
+<div class="container-fluid">
+	<div class="row bg-dark mb-2" style="height:42px;">
+		<div class="col col-md-12 text-white d-flex align-items-center">
+			yym2044님의 회원정보입니다.
+		</div>
+	</div>
+	
+	<div class="row mb-2">
+		<div class="col col-md-12 d-flex">
+			<i class="bi bi-caret-right-square-fill text-primary"></i> 
+			<span class="ms-2 fw-bold">회원 기본 정보</span>
+		</div>
+	</div>
+	
+	<!-- table -->
+	
+	<table class="table">
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">아이디</td>
+			<td class="text-start">yym2044<span class="ms-2"><a href="#" class="fs-6">비번변경</a></span></td>
+		</tr>
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">이름</td>
+			<td class="text-start">윤영민</td>
+		</tr>
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">이메일</td>
+			<td class="text-start">yym2044@naver.com</td>
+		</tr>
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">회원등급</td>
+			<td class="text-start">일반회원<span class="ms-2"><a href="#" class="fs-6">등급변경</a></span></td>
+		</tr>
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">가입/접속</td>
+			<td class="text-start">2022.02.17 22:12</td>
+		</tr>
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">로그인</td>
+			<td class="text-start">총 로그인 119회 (마지막 로그인 : 2022.02.17)</td>
+		</tr>
+	</table>
+
+
+
+	<div class="row mb-2">
+		<div class="col col-md-12 d-flex">
+			<i class="bi bi-caret-right-square-fill text-primary"></i> 
+			<span class="ms-2 fw-bold">사이트 가입 정보</span>
+		</div>
+	</div>
+
+	<!-- table -->
+	
+	<table class="table">
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">주소</td>
+			<td class="text-start">경기도 남양주시 </td>
+		</tr>
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">휴대폰</td>
+			<td class="text-start">010-1234-5678</td>
+		</tr>
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">전화번호</td>
+			<td class="text-start">02-123-4567</td>
+		</tr>
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">생년월일</td>
+			<td class="text-start">1996.06.07</td>
+		</tr>
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">성별</td>
+			<td class="text-start">남성</td>
+		</tr>
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">이메일 수신동의</td>
+			<td class="text-start">예</td>
+		</tr>
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">SMS 수신동의</td>
+			<td class="text-start">예</td>
+		</tr>
+		<tr>
+			<td style="width:200px;" class="bg-light text-start">마케팅 수신동의</td>
+			<td class="text-start">예</td>
+		</tr>
+	</table>
+
+	<div class="row mb-2">
+		<div class="col col-md-12 d-flex">
+			<i class="bi bi-caret-right-square-fill text-primary"></i> 
+			<span class="ms-2 fw-bold">관리자 운영 메모</span>
+		</div>
+	</div>
+	
+	<div class="row mb-4">
+		<div class="col col-md-11">
+			<input type="text" class="form-control">
+		</div>
+		<div class="col col-md text-end">
+			<a class="btn btn-outline-dark">등록</a>
+		</div>
+	
+	</div>
+	
+	<table class="table table-hover container2">
+		<thead>
+			<tr>
+				<th style="width:100px;">번호</th>
+				<th style="width:200px;">작성일</th>
+				<th>내용</th>
+				<th style="width:100px;">작성자</th>
+				<th style="width:100px;">관리</th>
+			</tr>	
+		</thead>
+		<tbody>
+			<tr>
+			<td colspan="5">관리자 메모가 없습니다.</td>
+			</tr>
+		</tbody>
+	</table>
+	<br>
+	<br>
+	
+	
+</div>
+
+
+
 
 <script src="../../../bootstrap/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
