--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -311,7 +311,7 @@
 				</div>
 
 				<div class="table-responsive">
-					<table class="table table-hover border border-2 box-white">
+					<table class="table table-hover border border-2 box-white" style="min-width:1000px;">
 						<thead>
 							<tr>
 								<th><input type="checkbox" name="checkbox1" onclick="selectAll1(this)" class="form-check-input"></th>
@@ -339,7 +339,7 @@
 									<div class="d-flex justify-content-center align-items-center">
 										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-chat-right-dots"></i></a>
 										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-envelope"></i></i></a>
-										<a href="#" class="btn btn-sm btn-outline-dark py-0" onclick="window.open('memberview.html','name','resizable=no width=800 height=500');return false">관리</a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0" onclick="window.open('memberview.html','name','resizable=no width=1000 height=500');return false">관리</a>
 									</div>
 								</td>
 							</tr>
