--- a/public/durian/html/xdmin/member/memberEdit.html
+++ b/public/durian/html/xdmin/member/memberEdit.html
@@ -38,11 +38,15 @@
 		</tr>
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">이름</td>
-			<td class="text-start">윤영민</td>
+			<td class="text-start"><input type="text"></td>
 		</tr>
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">이메일</td>
-			<td class="text-start">yym2044@naver.com</td>
+			<td class="text-start">
+				<input type="text">
+				@
+				<input type="text">
+			</td>
 		</tr>
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">회원등급</td>
