--- a/public/durian/html/xdmin/member/memberView.html
+++ b/public/durian/html/xdmin/member/memberView.html
@@ -34,7 +34,7 @@
 	<table class="table">
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">아이디</td>
-			<td class="text-start">yym2044<span class="ms-2"><a href="#" class="fs-6">비번변경</a></span></td>
+			<td class="text-start">yym2044<span class="ms-2"><a href="#" class="fs-6" style="text-decoration: none;">비번변경</a></span></td>
 		</tr>
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">이름</td>
@@ -46,7 +46,7 @@
 		</tr>
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">회원등급</td>
-			<td class="text-start">일반회원<span class="ms-2"><a href="#" class="fs-6">등급변경</a></span></td>
+			<td class="text-start">일반회원<span class="ms-2"><a href="#" class="fs-6" style="text-decoration: none;">등급변경</a></span></td>
 		</tr>
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">가입/접속</td>
@@ -58,7 +58,9 @@
 		</tr>
 	</table>
 
-
+	<div class="text-center">
+		<a href="./memberEdit.html" type="button" class="btn btn-outline-secondary btn-sm border border-3 container1">정보수정</a>
+	</div>
 
 	<div class="row mb-2">
 		<div class="col col-md-12 d-flex">
@@ -139,7 +141,7 @@
 	</table>
 	
 	<div class="text-center">
-		<button type="button" class="btn btn-sm border border-3 container1" onClick="window.close()">닫기</button>
+		<button type="button" class="btn btn-sm btn-outline-secondary border border-3 container1" onClick="window.close()">닫기</button>
 	</div>
 	
 	<br>
