--- a/public/durian/html/xdmin/member/memberEdit.html
+++ b/public/durian/html/xdmin/member/memberEdit.html
@@ -31,7 +31,7 @@
 	
 	<!-- table -->
 	
-	<table class="table">
+	<table class="table" style="border-collapse: separate;">
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">아이디</td>
 			<td class="text-start">yym2044<span class="ms-2"><a href="#" class="fs-6">비번변경</a></span></td>
@@ -73,7 +73,7 @@
 
 	<!-- table -->
 	
-	<table class="table">
+	<table class="table" style="border-collapse: separate;">
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">주소</td>
 			<td class="text-start">경기도 남양주시 </td>
