--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -370,7 +370,7 @@
 				</div>
 
 				<div class="table-responsive">
-					<table class="table table-hover border border-2 box-white" style="min-width:1000px;">
+					<table class="table border border-2 box-white" style="min-width:1000px; border-collapse:separate;">
 						<thead>
 							<tr>
 								<th><input type="checkbox" name="checkbox1" onclick="selectAll1(this)" class="form-check-input"></th>
