--- a/public/durian/html/xdmin/member/memberView.html
+++ b/public/durian/html/xdmin/member/memberView.html
@@ -118,12 +118,12 @@
 			<input type="text" class="form-control">
 		</div>
 		<div class="col col-md text-end">
-			<a class="btn btn-outline-dark">등록</a>
+			<a class="btn btn-outline-dark" onclick="add_row()">등록</a>
 		</div>
 	
 	</div>
 	
-	<table class="table table-hover container2">
+	<table class="table container2" style="border-collapse: separate;"> 
 		<thead>
 			<tr>
 				<th style="width:100px;">번호</th>
@@ -133,10 +133,12 @@
 				<th style="width:100px;">관리</th>
 			</tr>	
 		</thead>
-		<tbody>
+		<tbody id="my-tbody">
+		<!-- 
 			<tr>
 			<td colspan="5">관리자 메모가 없습니다.</td>
-			</tr>
+			</tr> 
+		-->
 		</tbody>
 	</table>
 	
@@ -155,7 +157,27 @@
 
 <script src="../../../bootstrap/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
-	<script src="../../../js/sidebars.js"></script>
+<script src="../../../js/sidebars.js"></script>
+	
+<script type="text/javascript">
+
+function add_row() {
+    var my_tbody = document.getElementById('my-tbody');
+    // var row = my_tbody.insertRow(0); // 상단에 추가
+    var row = my_tbody.insertRow( my_tbody.rows.length ); // 하단에 추가
+    var cell1 = row.insertCell(0);
+    var cell2 = row.insertCell(1);
+    var cell3 = row.insertCell(2);
+    var cell4 = row.insertCell(3);
+    var cell5 = row.insertCell(4);
+    cell1.innerHTML = 1;
+    cell2.innerHTML = new Date().toUTCString();
+    cell3.innerHTML = '내용'
+    cell4.innerHTML = 'master'
+    cell5.innerHTML = "X"
+  }
+  
+</script>
 
 </body>
 
