--- a/public/durian/html/xdmin/member/memberView.html
+++ b/public/durian/html/xdmin/member/memberView.html
@@ -177,6 +177,12 @@ function add_row() {
     cell5.innerHTML = "X"
   }
   
+function delete_row() {
+    var my_tbody = document.getElementById('my-tbody');
+    if (my_tbody.rows.length < 1) return;
+    // my_tbody.deleteRow(0); // 상단부터 삭제
+    my_tbody.deleteRow( my_tbody.rows.length-1 ); // 하단부터 삭제
+  }
 </script>
 
 </body>
