--- a/public/durian/html/xdmin/member/memberView.html
+++ b/public/durian/html/xdmin/member/memberView.html
@@ -115,7 +115,7 @@
 	
 	<div class="row mb-4">
 		<div class="col col-md-11">
-			<input type="text" class="form-control">
+			<input type="text" class="form-control" id="inputMemo">
 		</div>
 		<div class="col col-md text-end">
 			<a class="btn btn-outline-dark" onclick="add_row()">등록</a>
@@ -171,9 +171,9 @@ function add_row() {
     var cell4 = row.insertCell(3);
     var cell5 = row.insertCell(4);
     cell1.innerHTML = 1;
-    cell2.innerHTML = new Date().toUTCString();
-    cell3.innerHTML = '내용'
-    cell4.innerHTML = 'master'
+    cell2.innerHTML = new Date().toLocaleString();
+    cell3.innerHTML = document.getElementById("inputMemo").value
+    cell4.innerHTML = 'Master'
     cell5.innerHTML = "X"
   }
   
