--- a/public/durian/html/xdmin/member/memberView.html
+++ b/public/durian/html/xdmin/member/memberView.html
@@ -45,7 +45,7 @@
 				</tr>
 				<tr>
 					<td style="width: 200px;" class="bg-light text-start">회원등급</td>
-					<td class="text-start">일반회원<span class="ms-2"><a href="#" class="fs-6" style="text-decoration: none;">등급변경</a></span></td>
+					<td class="text-start"><span class="fw-bold">일반회원</span><span class="ms-2"><a href="#" class="" style="text-decoration: none;">등급변경</a></span></td>
 				</tr>
 				<tr>
 					<td style="width: 200px;" class="bg-light text-start">가입/접속</td>
@@ -58,7 +58,7 @@
 			</table>
 
 			<div class="text-center">
-				<a href="./memberEdit.html" type="button" class="btn btn-outline-secondary btn-sm border border-3 container1">정보수정</a>
+				<a href="./memberEdit.html" type="button" class="btn btn-outline-dark btn-sm border border-3 container1">정보수정</a>
 			</div>
 
 			<div class="row mb-2">
@@ -140,7 +140,7 @@
 			</div>
 
 			<div class="text-center">
-				<button type="button" class="btn btn-sm btn-outline-secondary border border-3 container1" onClick="window.close()">닫기</button>
+				<button type="button" class="btn btn-sm btn-outline-dark border border-3 container1" onClick="window.close()">닫기</button>
 			</div>
 
 
