--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -162,14 +162,22 @@
 			</div>
 			<!-- offcanvas end -->
 
+
 			<div class="row collapse show" id="collapseNavbar">
 				<ul class="nav bg-secondary">
 					<li class="nav-item"><a class="nav-link link-light" href="#">Home</a></li>
 					<li class="nav-item"><a class="nav-link link-light" href="#">Features</a></li>
 					<li class="nav-item"><a class="nav-link link-light" href="#">시스템 관리</a></li>
-					<li class="nav-item"><a class="nav-link link-light" href="#">Dropdown</a></li>
+					<li class="nav-item dropdown"><a class="nav-link link-light dropdown-toggle" href="#" data-bs-toggle="dropdown">Dropdown</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Action</a></li>
+							<li><a class="dropdown-item" href="#">Another Action</a></li>
+							<li><a class="dropdown-item" href="#">Something else here</a></li>
+						</ul>
+					</li>
 				</ul>
 			</div>
+			
 			<!-- 
 			<div class="row">
 				<ul class="nav bg-secondary">
