--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -250,6 +250,7 @@
 										<select class="form-select form-select-sm">
 											<option>이름</option>
 											<option>아이디</option>
+											<option>이메일</option>
 										</select>
 									</div>
 									<div class="col-8 col-md-5">
@@ -314,14 +315,8 @@
 
 						<div class="row d-flex align-items-center mb-2">
 							<div class="col-3 fw-bold">검색어</div>
-							<div class="col-4 pe-1">
-								<select class="form-select">
-									<option>이름</option>
-									<option>아이디</option>
-								</select>
-							</div>
-							<div class="col-5 ps-0">
-								<input type="text" class="form-control">
+							<div class="col">
+								<input type="text" class="form-control" placeholder="이름, 아이디, 이메일">
 							</div>
 						</div>
 
