--- a/public/durian/html/xdmin/member/memberEdit.html
+++ b/public/durian/html/xdmin/member/memberEdit.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="uTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>회원정보</title>
+<title>회원정보 수정</title>
 <link rel="stylesheet" href="../../../bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="../../../css/style.css">
@@ -38,14 +38,20 @@
 		</tr>
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">이름</td>
-			<td class="text-start"><input type="text"></td>
+			<td class="text-start"><input type="text" value="윤영민"></td>
 		</tr>
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">이메일</td>
 			<td class="text-start">
-				<input type="text">
+				<input type="text" value="yym2044">
 				@
-				<input type="text">
+				<input list="emailDomainOptions" id="emailDomainDataList" placeholder="Type to search..." value="naver.com">
+					<datalist id="emailDomainOptions">
+						  <option value="naver.com">
+						  <option value="gmail.com">
+						  <option value="daum.net">
+						  <option value="nate.com">
+					</datalist>
 			</td>
 		</tr>
 		<tr>
