--- a/public/durian/html/xdmin/member/memberView.html
+++ b/public/durian/html/xdmin/member/memberView.html
@@ -29,7 +29,7 @@
 
 			<!-- table -->
 
-			<table class="table">
+			<table class="table" style="border-collapse: collapse;">
 				<tr>
 					<td style="width: 200px;" class="bg-light text-start">아이디</td>
 					<td class="text-start">yym2044<span class="ms-2"><a href="#" class="fs-6"
@@ -41,19 +41,23 @@
 				</tr>
 				<tr>
 					<td style="width: 200px;" class="bg-light text-start">이메일</td>
-					<td class="text-start">yym2044@naver.com</td>
+					<td class="text-start">yym2044@naver.com<span class="badge bg-primary ms-1">수신동의</span></td>
 				</tr>
 				<tr>
 					<td style="width: 200px;" class="bg-light text-start">회원등급</td>
 					<td class="text-start"><span class="fw-bold">일반회원</span><span class="ms-2"><a href="#" class="" style="text-decoration: none;">등급변경</a></span></td>
 				</tr>
 				<tr>
-					<td style="width: 200px;" class="bg-light text-start">가입/접속</td>
-					<td class="text-start">2022.02.17 22:12</td>
+					<td style="width: 200px;" class="bg-light text-start">주소</td>
+					<td class="text-start">경기도 남양주시</td>
 				</tr>
 				<tr>
-					<td style="width: 200px;" class="bg-light text-start">로그인</td>
-					<td class="text-start">총 로그인 119회 (마지막 로그인 : 2022.02.17)</td>
+					<td style="width: 200px;" class="bg-light text-start">휴대폰</td>
+					<td class="text-start">010-1234-5678<span class="badge bg-secondary ms-1">수신거부</span></td>
+				</tr>
+				<tr>
+					<td style="width: 200px;" class="bg-light text-start">전화번호</td>
+					<td class="text-start">02-123-4567</td>
 				</tr>
 			</table>
 
@@ -63,24 +67,21 @@
 
 			<div class="row mb-2">
 				<div class="col col-md-12 d-flex">
-					<i class="bi bi-caret-right-square-fill text-primary"></i> <span class="ms-2 fw-bold">사이트 가입 정보</span>
+					<i class="bi bi-caret-right-square-fill text-primary"></i> <span class="ms-2 fw-bold">추가 정보</span>
 				</div>
 			</div>
 
 			<!-- table -->
 
 			<table class="table">
+				
 				<tr>
-					<td style="width: 200px;" class="bg-light text-start">주소</td>
-					<td class="text-start">경기도 남양주시</td>
+					<td style="width: 200px;" class="bg-light text-start">가입/접속</td>
+					<td class="text-start">2022.02.17 22:12</td>
 				</tr>
 				<tr>
-					<td style="width: 200px;" class="bg-light text-start">휴대폰</td>
-					<td class="text-start">010-1234-5678</td>
-				</tr>
-				<tr>
-					<td style="width: 200px;" class="bg-light text-start">전화번호</td>
-					<td class="text-start">02-123-4567</td>
+					<td style="width: 200px;" class="bg-light text-start">로그인</td>
+					<td class="text-start">총 로그인 119회 (마지막 로그인 : 2022.02.17)</td>
 				</tr>
 				<tr>
 					<td style="width: 200px;" class="bg-light text-start">생년월일</td>
@@ -89,14 +90,6 @@
 				<tr>
 					<td style="width: 200px;" class="bg-light text-start">성별</td>
 					<td class="text-start">남성</td>
-				</tr>
-				<tr>
-					<td style="width: 200px;" class="bg-light text-start">이메일 수신동의</td>
-					<td class="text-start">예</td>
-				</tr>
-				<tr>
-					<td style="width: 200px;" class="bg-light text-start">SMS 수신동의</td>
-					<td class="text-start">예</td>
 				</tr>
 				<tr>
 					<td style="width: 200px;" class="bg-light text-start">마케팅 수신동의</td>
